tests/parsing/simple_loops.out
==== Raw AST ====
[while ((doThings * 10) + 1) [[([a] = [10]), [(b * test)]]], while a [([b] = [10])], [[testError]], [done]]

==== Resolved AST ====
[while ((doThings * 10) + 1) [[([a] = [10]), [(b * test)]]], while a [([b] = [10])], [[testError]], [done]]

==== Diagnostics ====
 5 | ...<newline>    testError<newline><newline>...
                 ~~~~^~~~~~~~~
Error > Unexpected indent level > `INDENT` shouldn't go here.

==== Done ====
